force-app/main/default/objects/Car__c/fields/Car_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration_Number__c</fullName>
    <label>Car Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>