force-app/main/default/objects/Car__c/fields/Millage__c.field-meta.xml
<CustomField>
    <fullName>Millage__c</fullName>
    <label>Millage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>