force-app/main/default/objects/Car__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>VehicleType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>Convertible</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Sports Car</fullName>
            </value>
            <value>
                <fullName>Coupe</fullName>
            </value>
            <value>
                <fullName>Minivan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>