force-app/main/default/objects/Car__c/fields/YearOfRegistration__c.field-meta.xml
<CustomField>
    <fullName>YearOfRegistration__c</fullName>
    <label>YearOfRegistration</label>
    <type>Date</type>
</CustomField>